--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,10 @@ dependencies:
   flutter_svg: ^1.1.6
   flutter_screenutil: ^5.6.0
   flutter_animate: ^3.1.0
+  provider: ^6.0.5
+  dio: ^4.0.6
+  geolocator: ^9.0.2
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
